# drake-blender

./: .bazeliskrc  .bazelrc  .gitignore  BUILD.bazel  CONTRIBUTING.md  LICENSE.TXT  MODULE.bazel  README.md  WORKSPACE.bazel  WORKSPACE.bzlmod  bazel  defs.bzl  fix_lint.sh  pyproject.toml  renovate.json  requirements.in  requirements.txt  requirements_upgrade.sh  server.py  server_test.py
.github/: ci.bazelrc  ci_setup.bash  renovate.json
.github/workflows/: main.yml
examples/: BUILD.bazel  LICENSE.txt  README.md  ball_bin.py  ball_bin.yaml  requirements.in  requirements.txt
examples/test/: ball_bin_test.py  bpy_use_cycles.py  test_scenario.yaml
test/: BUILD.bazel  color_000.gltf  depth.gltf  label_000.gltf  one_rgba_box.gltf  one_rgba_one_texture_boxes.blend  one_texture_box.blend  requirements.in  requirements.txt  scene.gltf  server_test.py  two_rgba_boxes.gltf  unittest_path_cleaner.py
tools/: BUILD.bazel  black_main.py  buildifier_repositories.bzl  buildifier_version.bzl  defs.bzl  fix_lint.sh  isort_main.py  pycodestyle_main.py  requirements_upgrade.sh  requirements_upgrade_bazel.py  upgrade.sh  upgrade_helper.py  workspace_versions.bzl
