# SPDX-License-Identifier: BSD-2-Clause

load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("//tools:defs.bzl", "bazel_lint_test", "pip", "py_lint_test")

exports_files([
    "pyproject.toml",
    "server.py",
])

py_binary(
    name = "server",
    srcs = ["server.py"],
    visibility = ["//visibility:public"],
    deps = [
        pip("bpy"),
        pip("flask"),
    ],
)

bazel_lint_test(
    name = "bazel_lint_test",
    srcs = [
        "BUILD.bazel",
        "MODULE.bazel",
    ],
)

py_lint_test(
    name = "py_lint_test",
    srcs = [
        "bazel",
        "server.py",
    ],
)

compile_pip_requirements(
    name = "requirements",
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
    tags = ["manual"],
)
