# SPDX-License-Identifier: BSD-2-Clause

load(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
    "http_file",
)

http_archive(
    name = "rules_python",
    sha256 = "ffc7b877c95413c82bfd5482c017edcf759a6250d8b24e82f41f3c8b8d9e287e",
    strip_prefix = "rules_python-0.19.0",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.19.0/rules_python-0.19.0.tar.gz",
)

load("@rules_python//python:repositories.bzl", "py_repositories")

py_repositories()

load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
    name = "requirements",
    requirements_lock = "//:requirements.txt",
)

load("@requirements//:requirements.bzl", "install_deps")

install_deps()

pip_parse(
    name = "test_requirements",
    requirements_lock = "//:test/requirements.txt",
)

load("@test_requirements//:requirements.bzl", "install_deps")

install_deps()

pip_parse(
    name = "examples_requirements",
    requirements_lock = "//examples:requirements.txt",
)

load("@examples_requirements//:requirements.bzl", "install_deps")

install_deps()

# This is sample artwork from https://www.blender.org/download/demo-files/,
# licensed under CC0. Credit goes to Ramil Roosileht for creating it,
# https://twitter.com/limarest_art.
http_file(
    name = "color_attribute_painting",
    urls = [
        base + "/demo/sculpt_mode/color_attribute_painting.blend"
        for base in [
            "https://mirrors.ocf.berkeley.edu/blender",
            "https://mirror.clarkson.edu/blender",
        ]
    ],
    sha256 = "443b213229a4c863b2015beff623a700886c14928707a2fb24a6dd85fd80a207",
)
