# SPDX-License-Identifier: BSD-2-Clause

workspace(name = "drake_blender")

load(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
    "http_file",
)
load("//tools:workspace_versions.bzl", "WORKSPACE_VERSIONS")

http_archive(
    name = "rules_python",
    sha256 = WORKSPACE_VERSIONS["rules_python"]["sha256"],
    strip_prefix = "rules_python-{version}".format(
        version = WORKSPACE_VERSIONS["rules_python"]["version"],
    ),
    url = "https://github.com/bazelbuild/rules_python/releases/download/{version}/rules_python-{version}.tar.gz".format(
        version = WORKSPACE_VERSIONS["rules_python"]["version"],
    ),
)

load("@rules_python//python:repositories.bzl", "py_repositories")

py_repositories()

load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
    name = "requirements",
    requirements_lock = "//:requirements.txt",
)

load("@requirements//:requirements.bzl", "install_deps")

install_deps()

pip_parse(
    name = "test_requirements",
    requirements_lock = "//:test/requirements.txt",
)

load("@test_requirements//:requirements.bzl", "install_deps")

install_deps()

pip_parse(
    name = "examples_requirements",
    requirements_lock = "//examples:requirements.txt",
)

[
    http_file(
        name = name,
        executable = True,
        sha256 = sha256,
        url = "https://github.com/bazelbuild/buildtools/releases/download/v{}/{}".format(
            WORKSPACE_VERSIONS["buildifier"]["version"],
            name,
        ),
    )
    for name, sha256 in WORKSPACE_VERSIONS["buildifier"]["binaries"].items()
]

load("@examples_requirements//:requirements.bzl", "install_deps")

install_deps()

# This is a sample file from https://www.blender.org/download/demo-files/,
# licensed under CC0. Credit goes to Ramil Roosileht for creating it,
# https://twitter.com/limarest_art.
http_file(
    name = "color_attribute_painting",
    sha256 = "443b213229a4c863b2015beff623a700886c14928707a2fb24a6dd85fd80a207",
    urls = [
        base + "/demo/sculpt_mode/color_attribute_painting.blend"
        for base in [
            "https://mirrors.ocf.berkeley.edu/blender",
            "https://mirror.clarkson.edu/blender",
        ]
    ],
)
