# SPDX-License-Identifier: BSD-2-Clause
# Contains configuration settings for linting Python.

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 79

[project]
name = "drake-blender"
version = "0.2.1"

[project.scripts]
drake-blender-server = "server:main"