# SPDX-License-Identifier: BSD-2-Clause

[project]
name = "drake-blender"
version = "0.3.0.dev0"
# NOTE TO MAINTAINERS: when editing this list, you must copy the identical
# update into requirements.in as well.
dependencies = [
    "bpy",
    "flask"
]

[project.scripts]
drake-blender-server = "server:main"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 79
