# SPDX-License-Identifier: MIT-0

load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("//:defs.bzl", "py_lint_test")

exports_files(glob(["**"]))

py_binary(
    name = "ball_bin",
    srcs = ["ball_bin.py"],
    data = [
        ":ball_bin.yaml",
        "//:server",
        "@color_attribute_painting//file",
    ],
    deps = [
        "@bazel_tools//tools/python/runfiles",
        "@examples_requirements_drake//:pkg",
        "@examples_requirements_tqdm//:pkg",
    ],
)

py_test(
    name = "ball_bin_test",
    srcs = ["test/ball_bin_test.py"],
    data = [
        ":ball_bin",
        ":test/bpy_use_cycles.py",
    ],
)

py_lint_test(
    name = "py_lint_test",
    srcs = [
        "ball_bin.py",
        "test/ball_bin_test.py",
    ],
    # TODO(jwnimmer-tri) Enable this, after platform review of 'examples/**'.
    use_black = False,
)

compile_pip_requirements(
    name = "requirements",
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
    tags = ["manual"],
)
