# SPDX-License-Identifier: MIT-0

load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("//tools:defs.bzl", "bazel_lint_test", "pip", "py_lint_test")

exports_files(glob(["**"]))

py_binary(
    name = "ball_bin",
    srcs = ["ball_bin.py"],
    data = [
        ":ball_bin.yaml",
        "//:server",
        "@color_attribute_painting//file",
    ],
    deps = [
        "@rules_python//python/runfiles",
        pip("drake", "[examples]"),
        pip("opencv_python", "[examples]"),
        pip("tqdm", "[examples]"),
    ],
)

py_test(
    name = "ball_bin_test",
    srcs = ["test/ball_bin_test.py"],
    data = [
        ":ball_bin",
        ":test/bpy_use_cycles.py",
    ],
    deps = [pip("drake", "[examples]")],
)

bazel_lint_test(
    name = "bazel_lint_test",
    srcs = [
        "BUILD.bazel",
    ],
)

py_lint_test(
    name = "py_lint_test",
    srcs = [
        "ball_bin.py",
        "test/ball_bin_test.py",
    ],
)

compile_pip_requirements(
    name = "requirements",
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
    tags = ["manual"],
)
